--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  SaschaWTech
 
 # Build settings
-theme: slate@v0.2.0
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
