--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Sascha's Blog
-email: sascha.a.walker@gmail.com
+email: saschawalker@sascha-walker.com
 description: >- # this means to ignore newlines until "baseurl:"
   I write stuff.
 baseurl: "" # the subpath of your site, e.g. /blog
