--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Sascha's Blog
-email: saschawalker@sascha-walker.com
+# email: saschawalker@sascha-walker.com
 description: >- # this means to ignore newlines until "baseurl:"
-  I write stuff.
+  I write about cyber security, and miscellanious topics.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  SaschaWTech
+# github_username:  SaschaWTech
 
 # Build settings
 theme: minima
